Tweak Voronoi widget